# unioeste-comp-trabalho

./: .flake8  README.md
assets/: automaton.jff
examples/: 00_hello_world.cml  01_types.cml  02_something_wrong.cml  03_fibonacci.cml  04_fibonacci_for.cml  a.cml  cond.cml  decl_arith_lit copy.cml  decl_empty.cml  decl_rel_bool_lit.cml  decl_sum_id.cml  decl_sum_lit.cml  loop.cml  out.txt  trace.txt
specs/: cml.bnf  cml_v2.bnf  cml_v2_bnf.bnf  cu.ipynb  grammar copy.txt  grammar.old  grammar.txt  grammar_jsm.txt  grammar_val.txt  lang.md  lang_rc2.md  out.csv  out.txt  tabela.json
src/: pyproject.toml  requirements.txt
src/cml/: __init__.py  __main__.py  grammar.json  grave.py  lang.py  lexer.py  parser.py  rules.py  syntax.py  table.json  tokenizer.py  util.py
utils/myslr/: __main__.py  requirements.txt
