[project]
name = "cml"
version = "0.1.2"

description = "Compiler for the CML language (pls dont use this)"

# readme = "../../README.md"

requires-python = ">=3.10"

# license = {file = "LICENSE.txt"}

# keywords = ["sample", "setuptools", "development"]

# authors = [
#   {name = "A. Random Developer", email = "author@example.com" } # Optional
# ]

# maintainers = [
#   {name = "A. Great Maintainer", email = "maintainer@example.com" } # Optional
# ]

classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
#   "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish
#   "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "typer",
  "rich"
]

# [project.optional-dependencies]
# dev = ["check-manifest"]
# test = ["coverage"]

# [project.urls]  # Optional
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Reports" = "https://github.com/pypa/sampleproject/issues"
# "Funding" = "https://donate.pypi.org"
# "Say Thanks!" = "http://saythanks.io/to/example"
# "Source" = "https://github.com/pypa/sampleproject/"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]
cml = "cml:main"

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools.package-data]
# If there are data files included in your packages that need to be
# installed, specify them here.
cml_tables = ["*.json"]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"